[gd_scene load_steps=4 format=2]

[ext_resource path="res://battle/CameraSpot/CameraSpot.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[node name="CameraSpot" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.042, 0, 0, 0, 1, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="RayCastFront" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -1 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collide_with_areas = true

[node name="RayCastBack" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 1 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collide_with_areas = true

[node name="RayCastLeft" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.05, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.05, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]

[node name="Gizmo" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Gizmo"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10 )
current = true
far = 1000.0
